<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tcn_verifone_LanesConfig">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:text="@string/tcn_verifone_lanes_config_title"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tcn_verifone_lanes_config_lanes_per_row_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tcn_verifone_lanes_config_lanes_per_row"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tcn_verifone_lanes_config_lanes_per_row_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tcn_verifone_lanes_config_lanes_rows_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tcn_verifone_lanes_config_lanes_rows"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tcn_verifone_lanes_config_lanes_rows_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tcn_verifone_lanes_config_cabinet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/tcn_verifone_lanes_config_exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tcn_verifone_lanes_config_exit" />

            <Button
                android:id="@+id/tcn_verifone_lanes_config_apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tcn_verifone_lanes_config_apply" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>